--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ include(dart_functions)
 # ==============================================================================
 
 option(DART_VERBOSE "Print detailed build settings" OFF)
+option(DART_BUILD_PYTHON_BINDING "Build Python bindings" OFF)
 
 # ==============================================================================
 # Find Dependencies
@@ -49,6 +50,10 @@ endif()
 # C++ Project
 # ==============================================================================
 add_subdirectory(cpp)
+
+if(DART_BUILD_PYTHON_BINDING)
+  add_subdirectory(python)
+endif()
 
 # ==============================================================================
 # Code Formatting
