Check format only on focal

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       DOCKER_TAG: ubuntu-${{ matrix.distro }}-v8.0
       COMPILER: ${{ matrix.compiler }}
       BUILD_TYPE: ${{ matrix.build_type }}
-      CHECK_FORMAT: ON
+      CHECK_FORMAT: "${{ matrix.distro == 'focal' && 'ON' || 'OFF' }}"
       DART_BUILD_PYTHON_BINDING: ON
     steps:
       # https://github.com/marketplace/actions/docker-setup-qemu
