Initial test setup

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -3,4 +3,15 @@
 set(DART_CPP_PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(DART_CPP_PROJECT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
+# ==============================================================================
+# Add Source Directories
+# ==============================================================================
+add_subdirectory(external)
 add_subdirectory(src)
+
+# ==============================================================================
+# Test
+# ==============================================================================
+if(DART_BUILD_TESTS)
+  add_subdirectory(test)
+endif()
