--- a/cpp/benchmark/unit/CMakeLists.txt
+++ b/cpp/benchmark/unit/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Copyright (c) 2011-2021, The DART development contributors
 
-set(test_type "TEST_UNIT")
+set(test_type "BENCHMARK_UNIT")
 
 add_subdirectory(common)
 add_subdirectory(math)
