--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ option(DART_VERBOSE "Print detailed build settings" OFF)
 option(DART_BUILD_TESTS "Build tests" ON)
 option(DART_BUILD_BENCHMARKS "Build benchmarks" ON)
 option(DART_BUILD_PYTHON_BINDING "Build Python bindings" OFF)
+option(DART_ENABLE_CODECOV "Enable code coverage reporting using Codecov" OFF)
 
 # ==============================================================================
 # Find Dependencies
