Disable tests and benchmarks on bionic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
       DOCKER_TAG: ubuntu-${{ matrix.distro }}-v8.0
       COMPILER: ${{ matrix.compiler }}
       BUILD_TYPE: ${{ matrix.build_type }}
+      BUILD_TESTS: "${{ matrix.distro == 'bionic' && 'OFF' || 'ON' }}"
+      BUILD_BENCHMARKS:  "${{ matrix.distro == 'bionic' && 'OFF' || 'ON' }}"
       CHECK_FORMAT: "${{ matrix.distro == 'focal' && 'ON' || 'OFF' }}"
       DART_BUILD_PYTHON_BINDING: ON
     steps:
