--- a/cpp/external/CMakeLists.txt
+++ b/cpp/external/CMakeLists.txt
@@ -1,4 +1,9 @@
 # Copyright (c) 2011-2021, The DART development contributors
 
-add_subdirectory(googletest)
-add_subdirectory(benchmark)
+if(DART_BUILD_TESTS)
+  add_subdirectory(googletest)
+endif()
+
+if(DART_BUILD_BENCHMARKS)
+  add_subdirectory(benchmark)
+endif()
