--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,4 +1,6 @@
 # Copyright (c) 2011-2021, The DART development contributors
 
+add_subdirectory(src)
+
 add_subdirectory(unit)
 add_subdirectory(integration)
