Build dartpy on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       BUILD_BENCHMARKS: "${{ (matrix.distro == 'focal' && matrix.platform == 'linux/amd64' && matrix.build_type == 'Release') && 'ON' || 'OFF' }}"
       CHECK_FORMAT: "${{ matrix.distro == 'focal' && 'ON' || 'OFF' }}"
       ENABLE_CODECOV: "${{ matrix.distro == 'focal' && matrix.build_type == 'Debug' && 'ON' || 'OFF' }}"
-      DART_BUILD_PYTHON_BINDING: ON
+      BUILD_PYTHON_BINDING: "${{ matrix.compiler == 'gcc' && 'ON' || 'OFF' }}"
     steps:
       # https://github.com/marketplace/actions/docker-setup-qemu
       - name: Set up QEMU
@@ -88,7 +88,7 @@ jobs:
       BUILD_TYPE: ${{ matrix.build_type }}
       BUILD_TESTS: ON
       BUILD_BENCHMARKS: "${{ matrix.build_type == 'Release' && 'ON' || 'OFF' }}"
-      DART_BUILD_PYTHON_BINDING: ON
+      BUILD_PYTHON_BINDING: ON
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
@@ -106,10 +106,10 @@ jobs:
     env:
       BUILD_TYPE: ${{ matrix.build_type }}
       VCPKG_ROOT: "C:/dartsim/vcpkg"
-      VCPKG_BUILD_TAG: v0.2.0-70f192e
+      VCPKG_BUILD_TAG: v0.3.0-2020.11-1
       BUILD_TESTS: ON
       BUILD_BENCHMARKS: "${{ matrix.build_type == 'Release' && 'ON' || 'OFF' }}"
-      DART_BUILD_PYTHON_BINDING: ON
+      BUILD_PYTHON_BINDING: ON
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
