--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -4,3 +4,4 @@ set(DART_PYTHON_PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(DART_PYTHON_PROJECT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 add_subdirectory(src)
+add_subdirectory(test)
