--- a/cpp/benchmark/unit/common/CMakeLists.txt
+++ b/cpp/benchmark/unit/common/CMakeLists.txt
@@ -9,7 +9,7 @@ if(test_files)
 endif()
 
 set(link_libraries)
-set(link_dart_libraries ${PROJECT_NAME}-common)
+set(link_dart_libraries ${PROJECT_NAME}${DART_VERSION_MAJOR}-common)
 
 # Build the uint tests
 dart_build_benchmarks(
