--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -19,6 +19,10 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [Debug, Release]
+        build_shared_libs: [OFF]
+        # include:
+        #   - build_type: Release
+        #     build_shared_libs: ON
     env:
       BUILD_TYPE: ${{ matrix.build_type }}
       VCPKG_ROOT: "C:/dartsim/vcpkg"
@@ -26,6 +30,7 @@ jobs:
       BUILD_TESTS: ON
       BUILD_BENCHMARKS: "${{ matrix.build_type == 'Release' && 'ON' || 'OFF' }}"
       BUILD_PYTHON_BINDING: ON
+      BUILD_SHARED_LIBS: ${{ matrix.build_shared_libs }}
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
@@ -35,6 +40,10 @@ jobs:
           choco install -y wget
           wget -q https://github.com/dartsim/vcpkg-build/releases/download/%VCPKG_BUILD_TAG%/vcpkg-dartsim-dependencies.zip
           unzip -qq vcpkg-dartsim-dependencies.zip -d C:\dartsim
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -U pytest
       - name: Build
         shell: cmd
         run: |
@@ -45,3 +54,5 @@ jobs:
             -DCMAKE_TOOLCHAIN_FILE="%VCPKG_ROOT%/scripts/buildsystems/vcpkg.cmake"
           cmake --build . --config %BUILD_TYPE% --target ALL_BUILD --parallel
           ctest --output-on-fauilure -C %BUILD_TYPE%
+          cmake --build . --config %BUILD_TYPE% --target install-dartpy8
+          python -c "import dartpy8"
